# papyri

./: Cargo.toml  README.md  rusty-tags.emacs  rusty-tags.vi
src/: context_mapper.rs  lib.rs  model.rs  plot_design.rs  scale.rs  text.rs
src/mappings/: area.rs  bar.rs  interval.rs  line.rs  mod.rs  scatter.rs  surface.rs  text.rs
src/render/: context_mapper.rs  mod.rs  plot_design.rs  scale.rs  text.rs
src/render/mappings/: area.rs  bar.rs  interval.rs  line.rs  mod.rs  scatter.rs  surface.rs  text.rs
src/tests/: mod.rs
