# alt-names:

[package]
name = "plots"
version = "0.1.0"
edition = "2018"

[lib]
crate-type=["rlib", "cdylib"]

[dependencies]
gdk4 = "0.3"
gdk-pixbuf = "0.14"
# cairo-rs = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.15", features = ["svg", "png", "ps"]}
cairo-rs = { version = "0.14", features = ["svg", "png", "ps"] }
either = "1.6.1"
regex = { version = "1.4.2" }
serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.68"
showable = { path = "../showable" }
tempfile = "3.2.0"
base64="0.13.0"
