# alt-names:

[package]
name = "papyri"
version = "0.1.0"
edition = "2018"

[lib]
crate-type=["rlib", "cdylib"]

[[bin]]
name="papyri"
path = "src/bin/main.rs"

[dependencies]

# Pure-rust dependencies, required if all that is needed is to build plot models
either = "1.6.1"
regex = { version = "1.4.2" }
serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.68"
tempfile = "3.2.0"
base64="0.13.0"

# Glib-based dependencies, for rendering.
gdk4 = { version = "0.3", optional = true }
gdk-pixbuf = { version = "0.14", optional = true }
cairo-rs = { version = "0.14", features = ["svg", "png", "ps"], optional = true }
thiserror = "1.0.31"


