[package]
name = "papyri"
version = "0.1.2"
edition = "2018"
description = "Data visualization based on Cairo"
license = "MIT"
repository="https://github.com/limads/papyri"

[lib]
crate-type=["rlib", "cdylib"]

[[bin]]
name="papyri"
path = "src/bin/main.rs"

[dependencies]
# Pure-rust dependencies, required if all that is needed is to build plot models
either = "1.6.1"
regex = { version = "1.4.2" }
serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.68"
tempfile = "3.2.0"
base64="0.13.0"
thiserror = "1.0.31"

# Glib-based dependencies, for rendering.
gdk4 = { version = "0.4", optional = true }
gdk-pixbuf = { version = "0.15", optional = true }
cairo-rs = { version = "0.15", features = ["svg", "png", "ps"], optional = true }
